# context-engineer

./: .cursorrules  .env.example  .gitignore  .pyre_configuration  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SETUP.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup_venv.ps1  setup_venv.sh  setup_venv.zsh
.agent/: skills.yaml
.github/workflows/: ci.yml
cli/: __init__.py  main.py  shared.py
core/: __init__.py  ai_governance_service.py  autopilot_service.py  cache.py  config_service.py  constitution.py  context_capture.py  engine.py  exceptions.py  git_service.py  health.py  i18n.py  llm_provider.py  logging_service.py  marketplace_service.py  metrics.py  pattern_library.py  planning.py  prerequisites.py  progress.py  project_analyzer.py  project_status_service.py  prompt_service.py  reporting_service.py  research.py  stack_plugins.py  template_engine.py  types.py  userstory_integration.py  validators.py  verification.py  wave_executor.py
docs/: AI_GOVERNANCE.md  CLI_COMMANDS.md  CURSOR_EXAMPLES.md  DASHBOARD.md  FRAMEWORK_OVERVIEW.md  INDEX.md  MAIN_USAGE_GUIDE.md  MARKETPLACE.md  MULTI_IDE_USAGE_GUIDE.md  NEW_STACK_ONBOARDING_GUIDE.md  PRP_BUSINESS_RULES.md  QUICK_REFERENCE.md  USER_STORY_QUICK_GUIDE.md  ci_bootstrap_template.yml  marketplace_catalog.json
metrics/: AnalyticsAPI.json  WebPortal.json  context-engineer.json  proj.json  test-proj.json  workspace.json
schemas/: prp-phase-schema.json  stack_plugin.schema.yaml  task-schema.json
stacks/: go-gin.yaml  node-react.yaml  python-fastapi.yaml  vue3.yaml
tests/: test_ai_governance_service.py  test_autopilot_service.py  test_cache.py  test_cli_ai_governance.py  test_cli_alias.py  test_cli_commit.py  test_cli_devops.py  test_cli_doctor.py  test_cli_explore.py  test_cli_generation.py  test_cli_main.py  test_cli_new_commands.py  test_cli_patterns.py  test_cli_provider.py  test_cli_quickstart.py  test_cli_reporting.py  test_cli_shared.py  test_cli_status.py  test_engine.py  test_exceptions.py  test_git_service.py  test_hybrid_modes.py  test_i18n.py  test_llm_provider.py  test_marketplace_service.py  test_metrics.py  test_pattern_library.py  test_planning.py  test_prerequisites.py  test_progress.py  test_project_analyzer.py  test_project_status_service.py  test_prompt_service.py  test_reporting_service.py  test_stack_plugins.py  test_status_templates.py  test_template_engine.py  test_template_outputs.py  test_types.py  test_userstory_integration.py  (+1 more)
(+74 files in other folders)
